# DZpiton

./: README.md  main.py  operations.json  pyproject.toml
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  regex_utils.py  transaction_reader.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_regex_utils.py  test_transaction_reader.py  test_utils.py  test_widget.py
