[project]
name = "dzpiton"
version = "0.1.0"
description = ""
authors = [
    {name = "v1n1sk0",email = "maksimserbakov484@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
strict = false
disallow_untyped_defs = false
warn_return_any = true
exclude = "venv"