[project]
name = "dzpiton"
version = "0.1.0"
description = ""
authors = [
    {name = "v1n1sk0",email = "maksimserbakov484@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
strict = false
disallow_untyped_defs = false
warn_return_any = false
exclude = "venv"